# knowledge_base

./: .gitignore  README.md  pyproject.toml
.trae/documents/: 实现Python离线知识库CLI与索引检索.md
doc/: 实现进度.md  需求文档.md
kb/: __init__.py  ask.py  auto_add.py  autoadd_bulk.py  bootstrap.py  cli.py  config.py  doctor.py  fs_ops.py  importer.py  indexer.py  markdown.py  openai_compat.py  search.py  store_sqlite.py  tree.py  util.py
scripts/: build_and_install.sh  pyinstaller_entry.py
tests/: run_coverage_trace.py  test_ask.py  test_auto_add.py  test_autoadd_bulk.py  test_bootstrap.py  test_cli_search.py  test_cli_tree.py  test_config.py  test_doctor.py  test_e2e.py  test_fs_ops.py  test_importer.py  test_indexer.py  test_markdown.py  test_openai_compat.py  test_search.py  test_store_sqlite.py  test_tree.py  test_util.py
